# lerobot-sim2real

./: .gitignore  NOTES.md  env_config.json  newton-schulz5.ipynb  notes.ipynb  pyproject.toml  record_dataset.py
lerobot_sim2real/config/: real_robot.py
lerobot_sim2real/rl/: ppo_rgb.py
lerobot_sim2real/scripts/: camera_alignment.py
